Try to fix JDK 11 build.